cluster/media/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forbid-external
  namespace: media
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  - to:
    - podSelector: {}
  - to:
    - namespaceSelector: {}
